# wormhole

./: CMakeLists.txt  README.md  create_self-signed-cert.sh  curl.sh  wormhole.drawio
cfg/: wormhole_client.yaml  wormhole_server.yaml
include/: utils.h
src/: wormhole_client.cpp  wormhole_server.cpp
